change some css

--- a/frontend/src/image.css
+++ b/frontend/src/image.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url('./image6.jpg');
+    background-image: url('./background.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: flex;
